--- a/src/containers/Home/index.less
+++ b/src/containers/Home/index.less
@@ -32,3 +32,32 @@
     }
   }
 }
+.home-slider{
+  position: relative;
+  height: 170px;
+  div{
+    height: 100%;
+  }
+  img{
+    width: 100%;
+    height: 100%;
+  }
+  .home-slider-dots{
+   position: absolute;
+    bottom: 20px;
+    left:0px;
+    width: 100%;
+    text-align: center;
+    li{
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background: #fff;
+      margin-right: 10px;
+    }
+    li.active{
+      background: #2189dc;
+    }
+  }
+}
