--- a/src/containers/Home/index.less
+++ b/src/containers/Home/index.less
@@ -6,6 +6,7 @@
   top:0;
   left: 0;
   width: 100%;
+  z-index: 100;
     .home-header-btn{
         float: right;
         margin-right: 11px;
@@ -25,6 +26,7 @@
     left: 0;
     width: 100%;
     background: #2a2a2a;
+    z-index: 100;
     li{
       border-top:1px solid #464646;
       line-height: 46px;
@@ -32,6 +34,11 @@
     }
   }
 }
+.container h3{
+    line-height: 54px;
+    color: #3b3b3b;
+    font-weight: normal;
+ }
 .home-slider{
   position: relative;
   height: 170px;
@@ -59,5 +66,23 @@
     li.active{
       background: #2189dc;
     }
+  }
+}
+.home-list{
+  text-align: center;
+  p{
+    color: #777;
+    line-height: 40px;
+  }
+  span{
+    color: #ed3a3a;
+    line-height: 30px;
+  }
+  img{
+    width: 100%;
+  }
+  li{
+    box-shadow: 1px 1px 3px 2px #ccc;
+    margin-bottom: 20px;
   }
 }
